@@ -133,6 +133,7 @@ RULE_WANTHSREGEX=`./helpers/CutRule WANTHSREGEX $file`
 RULE_STATUS=`./helpers/CutRule STATUS $file`
 RULE_SOCKS4=`./helpers/CutRule SOCKS4 $file`
 RULE_IRIXNIS=`./helpers/CutRule IRIXNIS $file`
+RULE_LINUX_TWEAK=`./helpers/CutRule LINUX_TWEAK $file`
 
 #
 # Now we determine the OS/Platform automagically, thanks to
@@ -262,6 +263,9 @@ case "$PLAT" in
 	DEF_WANTHSREGEX=yes
 	OS='Linux'
 	CFLAGS="$CFLAGS -DLINUX"
+	if [ "$RULE_LINUX_TWEAK" = "yes" ]; then
+	    CFLAGS="$CFLAGS -DLINUX_TWEAK"
+	fi
 	;;
     *-lynx-lynxos*)
 	OS='LynxOS'
